
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

- [#2613] Ensure User Groups in mgr are sorted alphanumerically
- [#2599] Fixed issue where Add Element to Property Set window form values were not cleared on second loading
- [#2596] Fixed issue where User Groups could not be removed
- [#2542] Fixed hardcoded language lexicon load reference in policy/get processor
- [#2573] Fixed issue with backslash in TV output render property values
- [#2594] Fixed issue where special characters were being stripped from phone numbers in user profile
- Fixed issue with file tree that prevented image thumbnails from showing
- [#2525] Fixed filemanager_path issues by added filemanager_path_relative setting, and then calculating from that
- [#2589] Fixed issue with port 80 feeds in magpie RSS feed parser
- [#2544] Fixed issue with updatefromgrid processor with User Settings
- [#2560] Fixed issue with resourcelist TV not persisting set value
- [#2586] Add rank field to FC rules allowing organizing of order of execution
- Update core schemas and regenerate maps for new xPDO index elements
- [#69] Allow Transport Vehicles to abort installation when validation fails
- Update xPDO version to 2.0.0-rc2 (official release)
- [#2552] Fix scope issues when passing nested arrays in Chunk properties

MODx Revolution 2.0.4-pl2 (October 15, 2010)
====================================
- [#2502] Fix fatal error with Resources protected by Resource Groups
- Fixed issue with resourcelist TV

MODx Revolution 2.0.4-pl (October 14, 2010)
====================================
- Fixed issue where redirect was not working after creating new derivative resource
- [#2485] Fixed issue where placeholder was in duplicated Access Policy
- [#2492] Fixed reference in menu to bugs.modx.com