@@ -2,6 +2,7 @@
 This file shows the changes in recent releases of MODx. The most current release is usually the 
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+- [#2614] Expand comment field on modUserProfile to handle more than 255 characters
 - [#2613] Ensure User Groups in mgr are sorted alphanumerically
 - [#2599] Fixed issue where Add Element to Property Set window form values were not cleared on second loading
 - [#2596] Fixed issue where User Groups could not be removed
